修改服务端 可保存文件到固定路径以及数据库中

--- a/env/nginx/flask_nginx.conf
+++ b/env/nginx/flask_nginx.conf
@@ -2,8 +2,8 @@
 server {
   listen [::]:8000 ssl;
   ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
-  ssl_certificate /etc/ssl/pd.goldminer.top.crt;
-  ssl_certificate_key /etc/ssl/pd.goldminer.top.key;
+  ssl_certificate /etc/ssl/nopa.datahys.com.crt;
+  ssl_certificate_key /etc/ssl/nopa.datahys.com.key;
   ssl_prefer_server_ciphers on;
 
   server_name pd.goldminer.top;
