--- a/env/nginx/flask_nginx.conf
+++ b/env/nginx/flask_nginx.conf
@@ -9,6 +9,10 @@ server {
   server_name pd.goldminer.top;
   charset utf-8;
 
+  client_body_temp_path /usr/local/nginx/html;
+  client_body_buffer_size 128k;
+  client_max_body_size 100M;
+
   # if ($server_port = 8080) {
   # rewrite ^(.*) https://pd.goldminer.top:8000$1 permanent;
   # }
